# stembot-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  dictionary.md  docker-compose.yml
etc/: agt-server.service  c0.toml  c1.toml  config-docker-bot0.toml  config-docker-bot1.toml  config-docker-bot2.toml  config-docker-bot3.toml  config-docker-bot4.toml  config.toml  config0.toml  config1.toml  config2.toml  s0.toml  s1.toml
scripts/: build_deb.sh  run.sh
src/: backlog.rs  collections.rs  config.rs  enums.rs  lib.rs  logger.rs  message.rs  messaging.rs  peering.rs  processing.rs  processor.rs  routing.rs  state.rs  ticket.rs  ticketing.rs  trace.rs
src/adapters/: mod.rs
src/adapters/process/: mod.rs
src/cli/: bench.rs  delete.rs  discover.rs  mod.rs  put.rs  run.rs  stat.rs
src/core/: backlog.rs  messaging.rs  mod.rs  peering.rs  processing.rs  routing.rs  state.rs  ticketing.rs  tracing.rs
src/core/broadcast/: mod.rs
src/core/broadcasting/: mod.rs  processing.rs
src/core/message/: mod.rs  processing.rs  promiscuous_decoding.rs  selective_decoding.rs
src/core/messaging/: mod.rs  processing.rs  promiscuous_decoding.rs  selective_decoding.rs
src/core/ticket/: exchange.rs  mod.rs  processing.rs
src/core/ticketing/: exchange.rs  mod.rs  processing.rs
src/dao/: collection.rs  datastore.rs  document.rs  kvstore.rs  mod.rs  object.rs
src/executor/: agent.rs  file.rs  mod.rs  process.rs
src/interface/: debug.rs
src/io/http/: client.rs  endpoint.rs
src/models/: config.rs  control.rs  mod.rs  network.rs  routing.rs
src/private/http/: mod.rs  ticketing.rs
src/private/http/client/: ticketing.rs
src/private/http/server/: mod.rs  ticketing.rs
src/public/http/: client.rs  endpoint.rs  mod.rs  server.rs
