[package]
name = "stembot-rust"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "agt-server"
path = "src/bin/server.rs"

[[bin]]
name = "agt-configure"
path = "src/bin/configure.rs"

[[bin]]
name = "agt-control"
path = "src/bin/control.rs"

[dependencies]
actix-web = "4.13.0"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
clokwerk = "0.4.0"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = "0.11.13"
serde = { version = "1.0.150", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
toml = "0.5.9"
url = "2.3.0"
rand = "0.8.5"
magic-crypt = "3.1.12"
sha256 = "1.1.4"
tracing-actix-web = "0.7.21"
bincode = "1.3.3"
serde_json = "1.0.104"
anyhow = "1.0.75"
rusqlite = "0.32"
regex = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
flate2 = "1"
md5 = "0.7"
aes = "0.8"
eax = "0.5"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
mockito = "1"
