[package]
name = "stembot-rust"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "agt-server"
path = "src/bin/server.rs"

[[bin]]
name = "agt-configure"
path = "src/bin/configure.rs"

[[bin]]
name = "agt-control"
path = "src/bin/control.rs"

[dependencies]
actix-web = { version = "4.13.0", default-features = false, features = ["macros"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", default-features = false, features = ["derive", "std"] }
clokwerk = "0.4.0"
env_logger = "0.10.2"
log = "0.4.29"
reqwest = { version = "0.11.27", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.8.6"
sha256 = "1.6.0"
tracing-actix-web = "0.7.21"
serde_json = "1.0.149"
anyhow = "1.0.102"
rusqlite = "0.32"
regex = "1.12.3"
uuid = { version = "1.23.1", default-features = false, features = ["v4", "fast-rng", "std"] }
base64 = "0.22"
flate2 = "1.1.9"
md5 = "0.7"
aes = "0.8"
eax = "0.5"
hex = "0.4"

[features]
debian = []

[dev-dependencies]
tempfile = "3.27.0"
mockito = "1.7.2"
